--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
+  "scripts": {
+    "start": "node index",
+    "dev": "nodemon index"
+  },
   "dependencies": {
+    "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
